# daion

./: .python-version  README.md  gabung.py  juli.py  main.py  new.py  pyproject.toml  requirements.txt  satu.py  test.py
company-monorepo/: README.md  nx.json  package-lock.json  package.json
csv/: REKAPAN PENCAPAIAN NASIONAL 21 AGUSTUS - 20 SEPTEMBER 2024.csv  REKAPAN PENCAPAIAN NASIONAL 21 JULI -20 AGUSTUS 2024.csv  REKAPAN PENCAPAIAN NASIONAL 21 NOVEMBER - 20 DESEMBER 2024.csv  REKAPAN PENCAPAIAN NASIONAL 21 OKTOBER - 20 NOVEMBER 2024.csv  REKAPAN PENCAPAIAN NASIONAL 21 SEPTEMBER - 20 OKTOBER 2024.csv
excel/: REKAPAN PENCAPAIAN NASIONAL 21 AGUSTUS - 20 SEPTEMBER.xlsx  REKAPAN PENCAPAIAN NASIONAL 21 JULI -20 AGUSTUS.xlsx  REKAPAN PENCAPAIAN NASIONAL 21 NOVEMBER - 20 DESEMBER.xlsx  REKAPAN PENCAPAIAN NASIONAL 21 OKTOBER - 20 NOVEMBER 2024.xlsx  REKAPAN PENCAPAIAN NASIONAL 21 SEPTEMBER - 20 OKTOBER.xlsx
juliagustus/: allarea.py  allareast.py  badung.py  bandungraya.py  bangkabelitung.py  banjar.py  bantencilegon.py  bantenpandeglang.py  bantenserang.py  bestds.py  bogorcileungsi.py  bogorklapanunggal.py  bogorparung.py  bogortambun.py  cengkareng.py  ciamis.py  cianjur.py  ciawi.py  cilacap.py  cirebon.py  cisolok.py  demak.py  denpasar.py  depok.py  garut.py  jakarta.py  jogja.py  kabtasik.py  karawang.py  kebumen.py  kediri.py  kendal.py  klaten.py  kudus.py  malang.py  medan.py  negara.py  ponorogo.py  purwakarta.py  purwokerto.py  (+10 more)
src/analytics/: metrics.py
src/config/: constants.py
src/data/: data_processor.py  loader.py  models.py
src/maps/: maps.py
(+10 files in other folders)
