[project]
name = "sales-analytics-dashboard"
version = "2.0.0"
description = "Sales Performance Analytics Dashboard - Restructured Monorepo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
